--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,11 +4,19 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	{{!-- Google Fonts --}}
+	
+	{{!-- Bootstrap 5.2 --}}
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/darkly/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<title>{{title}}</title>
 </head>
 <body>
 	
 	{{{body}}}
 
+	<script src="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/darkly/bootstrap.min.css"></script>
+	<script src="./js/main"></script>
 </body>
 </html>
