--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,7 +9,7 @@
 	
 	{{!-- Bootstrap 5.2 --}}
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/darkly/bootstrap.min.css">
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>{{title}}</title>
 </head>
 <body>
@@ -17,6 +17,6 @@
 	{{{body}}}
 
 	<script src="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/darkly/bootstrap.min.css"></script>
-	<script src="./js/main"></script>
+	<script src="/js/main.js"></script>
 </body>
 </html>
