Añadida fecha a nuevos posts, corregidos enlaces y cambios menores en la interfaz

--- a/views/show.hbs
+++ b/views/show.hbs
@@ -1,10 +1,11 @@
 <div class="col">
-  <h2>Post</h2>
+	<h2>Post</h2>
 
-  <div>
-    <h3>{{post.title}}</h3>
-    <div>
-      {{post.body}}
-    </div>
-  </div>
+	<div>
+		<h3>{{post.title}}</h3>
+		{{post.date}}
+		<div>
+			{{post.body}}
+		</div>
+	</div>
 </div>
