--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,11 +1,11 @@
 {{#if todo_ok}}
-<div class="alert alert-success" role="alert">
+<div class="alert alert-success mt-3" role="alert">
 	{{todo_ok}}
 </div>
 {{/if}}
 
 {{#if todo_error}}
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger mt-3" role="alert">
 	{{todo_error}}
 </div>
 {{/if}}
