--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,11 @@
 {{#each posts}}
-  <div class="col-lg-4 col-md-6 col-12">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">{{this.title}}</h5>
-        <p class="card-text">{{this.body}}</p>
-        <a href="#" class="btn btn-primary">Ver más...</a>
-      </div>
-    </div>
-  </div>
+	<div class="col-lg-4 col-md-6 col-12">
+		<div class="card my-3">
+			<div class="card-body">
+				<h5 class="card-title">{{this.title}}</h5>
+				<p class="card-text">{{this.body}}</p>
+				<a href="/posts/{{this.slug}}" class="btn btn-primary">Ver más...</a>
+			</div>
+		</div>
+	</div>
 {{/each}}
