--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,17 +1,20 @@
 <nav class="navbar navbar-expand-lg bg-light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Navbar</a>
+		<a class="navbar-brand" href="/">InfoBlog</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Inicio</a>
+					<a class="nav-link active" aria-current="page" href="/posts">Posts</a>
 				</li>
+				{{#if user}}
+				{{else}}
 				<li class="nav-item">
-				<a class="nav-link" href="#">Link</a>
+					<a class="nav-link" href="/auth/signup">Registro</a>
 				</li>
+				{{/if}}
 				<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					Dropdown
@@ -28,11 +31,11 @@
 				</li>
 				{{#if user}}
 				<li class="nav-item">
-					<a class="nav-link" href="#">Logout</a>
+					<a class="nav-link" href="/auth/logout">Logout</a>
 				</li>
 				{{else}}
 				<li class="nav-item">
-					<a class="nav-link" href="#">Login</a>
+					<a class="nav-link" href="/auth/signin">Login</a>
 				</li>
 				{{/if}}
 			</ul>
