--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,15 +1,4 @@
-{{#if todo_ok}}
-<div class="alert alert-success mt-3" role="alert">
-	{{todo_ok}}
-</div>
-{{/if}}
-
-{{#if todo_error}}
-<div class="alert alert-danger mt-3" role="alert">
-	{{todo_error}}
-</div>
-{{/if}}
-
+{{> flash}}
 
 <div class="col">
 	<form action="/auth/signin" method="POST">
